css: enforce high z-index values to ensure the menu is displayed over application content

--- a/bandeau-ENT.css
+++ b/bandeau-ENT.css
@@ -22,7 +22,7 @@
 }
 
 /* Portal Page Bar */
-.portalPageBarLinks {position:absolute; right: 0; top: 0; z-index: 2; background-color: #f7edd8; padding:0; }
+.portalPageBarLinks {position:absolute; right: 0; top: 0; z-index: 100004; background-color: #f7edd8; padding:0; }
 /* for IE7 IE8, force the width: force the width and make it auto for browsers handling :not selector (all browsers except IE lt 9) */ 
 .portalPageBarLinks { width: 15em; }
 .portalPageBarLinks:not([dummy]) { width: auto; }
@@ -93,7 +93,6 @@
     -webkit-border-bottom-right-radius : 5px;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius : 0;
-    z-index: -1;
     white-space: nowrap;
 }
 #portalPageBarAccountInner.open {
@@ -219,6 +218,7 @@ body {
 }
 
 .bandeau_ENT_Menu > li {
+ z-index: 100002;
  position:relative; 
  padding: 5px 11px 0px 11px;
  display: block;
@@ -255,7 +255,7 @@ body {
  color:#213885 !important;
 }
 .bandeau_ENT_Menu > li:hover { 
- z-index: 1;
+ z-index: 100003;
  } /* above activeTab in case of multi-line */
 
 /* subrow */
@@ -273,6 +273,7 @@ body {
    text-decoration:none; 
    color:#acc9e6 !important;
    text-shadow:1px 1px 1px rgba(0,0,0,.5);
+   z-index: 100005;
 }
 .bandeau_ENT_Menu li ul a:hover {
  color:#eee !important;
@@ -280,7 +281,7 @@ body {
 
 /* Flyout Navigation */
 .bandeau_ENT_Menu li ul {
-   width:200px; position:absolute; z-index:100000; display:none;
+   width:200px; position:absolute; z-index:100004; display:none;
    padding:0;
    margin: 0; /* needed on IE8, no drawbacks on others */
    background:transparent; 
